--- a/components/header.html
+++ b/components/header.html
@@ -27,7 +27,7 @@
     <div class="flex-shrink-0 flex justify-end items-center pr-4 gap-3 md:w-1/4">
       <a
         class="hidden md:inline-block bg-black/20 px-4 md:px-5 py-1 rounded-2xl text-white font-bold hover:bg-[#F7B32A] transition whitespace-nowrap text-sm md:text-base"
-        href="/login"
+        href=""
       >
         Login
       </a>
