Added cloundinary cdn

--- a/components/header.html
+++ b/components/header.html
@@ -8,7 +8,7 @@
     <div class="pl-4 flex-shrink-0 md:w-1/4">
       <a href="#home">
         <img
-          src="./public/images/logo.svg"
+          src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768298657/logo_xqpj40.svg"
           alt="Agaate Logo"
           class="h-6 w-auto sm:h-7 md:h-10"
         />
@@ -72,7 +72,7 @@
 
         <a
           class="mobile-nav-link block bg-black/20 px-5 py-2 rounded-xl text-center hover:bg-[#F7B32A]"
-          href="/login"
+          href=""
         >
           Login
         </a>
