--- a/components/footer.html
+++ b/components/footer.html
@@ -4,7 +4,7 @@
     
     <!-- LOGO + TEXT -->
     <div>
-      <img src="./public/images/favicon.png" class="w-28 mb-3" alt="Agaate favicon" />
+      <img src="https://res.cloudinary.com/dsxfpu2tk/image/upload/v1768298535/favicon_spmm8r.png" class="w-28 mb-3" alt="Agaate favicon" />
       <p class="text-sm text-gray-600">
         Leading the agricultural revolution with sustainable farming solutions.
       </p>
