--- a/components/footer.html
+++ b/components/footer.html
@@ -25,9 +25,9 @@
     <div>
       <p class="font-semibold mb-2">Company</p>
       <ul class="space-y-1 text-sm text-gray-600">
-        <li>About Us</li>
-        <li>Our Story</li>
-        <li>Meet the Team</li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#journey">Our Story</a></li>
+        <li><a href="#our-team">Meet the Team</a></li>
       </ul>
     </div>
 
@@ -35,9 +35,9 @@
     <div>
       <p class="font-semibold mb-2">Products</p>
       <ul class="space-y-1 text-sm text-gray-600">
-        <li>Wheat Seeds</li>
-        <li>Corn Seeds</li>
-        <li>Rice Seeds</li>
+        <li><a href="#our-products">Wheat Seeds</a></li>
+        <li><a href="#our-products">Corn Seeds</a></li>
+        <li><a href="#our-products">Rice Seeds</a></li>
       </ul>
     </div>
   </div>
